Predictive parsing product name
